upgrade aldryn-django 1.11.3.1 to 1.11.5.2

--- a/addons/aldryn-django/settings.json
+++ b/addons/aldryn-django/settings.json
@@ -2,5 +2,6 @@
     "disable_default_language_prefix": true, 
     "enable_gis": false, 
     "languages": "[\"en\"]", 
+    "session_timeout": "", 
     "use_manifeststaticfilesstorage": false
 }
