--- a/requirements.in
+++ b/requirements.in
@@ -1,15 +1,13 @@
 # <INSTALLED_ADDONS>  # Warning: text inside the INSTALLED_ADDONS tags is auto-generated. Manual changes will be overwritten.
-https://control.divio.com/api/v1/apps/serve/aldryn-addons/1.0.2/24f5d1c8-66fe-43b2-a540-17d61045a72b/aldryn-addons-1.0.2.tar.gz#egg=aldryn-addons==1.0.2
-https://control.divio.com/api/v1/apps/serve/aldryn-django/1.11.5.2/bf27e17e-a895-4d25-b18c-bf2cedb2cd87/aldryn-django-1.11.5.2.tar.gz#egg=aldryn-django==1.11.5.2
-https://control.divio.com/api/v1/apps/serve/aldryn-sso/1.1.16/dbe0c45a-c981-4beb-8624-b0d2c4196aa0/aldryn-sso-1.1.16.tar.gz#egg=aldryn-sso==1.1.16
-https://control.divio.com/api/v1/apps/serve/aldryn-celery/3.1.25.5/075ee232-62d4-4eb9-a558-ae55cc40b4fa/aldryn-celery-3.1.25.5.tar.gz#egg=aldryn-celery==3.1.25.5
+-e /app/addons-dev/django-addons
+-e /app/addons-dev/django-addon
+-e /app/addons-dev/django-celery-addon
 # </INSTALLED_ADDONS>
 
 ipython
 ipdb
 dateparser
 recurrent
-django-chainable-manager
 django-taggit
 django-extended-choices
 moviepy
@@ -23,5 +21,9 @@ graphene>=1.0
 django-graphiql
 graphene-django
 
-# boto3
+django-denorm
+
 boto3
+
+furl
+yurl
