--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "image"
       - "postgres"
       - "rabbitmq"
+      - "redis"
     command: bash
     env_file:
       - ".env-local"
@@ -53,3 +54,12 @@ services:
       RABBITMQ_ERLANG_COOKIE: "secret cookie here"
       VIRTUAL_HOST: "timelapseapp-rabbitmq.local.foul.is"
       VIRTUAL_PORT: 15672
+
+  redis:
+    image: redis:4.0-alpine
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      VIRTUAL_HOST: redis-commander.local.foul.is
+      REDIS_HOSTS: redis
