Many little changes

--- a/.env-local
+++ b/.env-local
@@ -4,3 +4,6 @@ DATABASE_URL=postgres://postgres@postgres:5432/db
 
 RABBITMQ_ERLANG_COOKIE="secret cookie here"
 BROKER_URL="amqp://guest:guest@rabbitmq:5672/"
+
+TIMELAPSE_STORAGE_DSN=file:///data/timelapse?url=https://timelapseapp-storage.local.foul.is
+# TIMELAPSE_STORAGE_DSN=s3+https://admin:secret@timelapseapp-storage.local.foul.is/?bucket_name=images&calling_format=ordinary&auth=s3v4&region_name=us-east-1
