--- a/.env-local
+++ b/.env-local
@@ -1,6 +1,7 @@
 DEBUG=True
 STAGE=local
 DATABASE_URL=postgres://postgres@postgres:5432/db
+CACHE_URL=db://django_dbcache
 
 RABBITMQ_ERLANG_COOKIE="secret cookie here"
 BROKER_URL="amqp://guest:guest@rabbitmq:5672/"
