--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   image:
     build: "."
     image: stefanfoulis/timelapseapp-backend:local
+    command: "true"
 
   base: &BASE
     image: stefanfoulis/timelapseapp-backend:local
